[tool.poetry]
name = "biosignalml-repository"
version = "0.6.0-a.1"
description = ""
authors = ["David Brooks <d.brooks@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
biosignalml = {url = "https://github.com/BioSignalML/biosignalml-python/releases/download/v0.7.1-a.1/biosignalml-0.7.1a1-py3-none-any.whl"}
numpy = "^1.25.2"
h5py = "^3.9.0"
tornado = "^6.3.3"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
